README updates and model runner addition.

--- a/notebooks/code_examples.ipynb
+++ b/notebooks/code_examples.ipynb
@@ -269,6 +269,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "fa90bdfe",
+   "metadata": {},
+   "source": [
+    "We compare the cosine distance from the embeddings between these two images.\n",
+    "This can be a helpful way to quickly recognize subsets of images that are similar to one another in a small subset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "913f8d48-46f4-4699-b33d-34827af33e8d",
@@ -302,6 +312,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "786220c2",
+   "metadata": {},
+   "source": [
+    "We can also perform principal component analysis (PCA) on the embeddings. This can be an effective way to study clusters for similar morphologies on large image datasets."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "405a3da1-5d35-4da4-be7e-59be9652a3da",
@@ -329,11 +348,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "23068da9-ac33-4222-a69b-df061fc80a51",
    "metadata": {},
    "source": [
-    "## DINO"
+    "## DINO\n",
+    "Similar to the SIFT-BOW comparisons, we can also use the `dino_in128_ls32.pth` file to embed these two images.\n",
+    "We use an input image standardized to size $128 \\times 128$ and receive a vector of size 32 as a latent embedding."
    ]
   },
   {
@@ -351,6 +373,15 @@
     "for i in png_filepaths:\n",
     "    DINO_embeddings.append(DINO_model.infer(input_file=i).flatten())\n",
     "DINO_embeddings = np.array(DINO_embeddings)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "d86aa9a0",
+   "metadata": {},
+   "source": [
+    "We can compare the cosine distance between these two embeddings, as we did with SIFT-BOW."
    ]
   },
   {
@@ -387,6 +418,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "5c3a408e",
+   "metadata": {},
+   "source": [
+    "We can plot the PCA dimensional reduction of our size-32 latent space, as we did with the SIFT-BOW model."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "9b1203e1",
@@ -411,6 +451,19 @@
     "plt.ylabel('PCA Feature 2')\n",
     "plt.title('PCA Reduction of DINO BOW Embeddings')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "841bb12a",
+   "metadata": {},
+   "source": [
+    "We include a script, `model_runner.py`, which can be used to train a DINO model. For a given input folder `input_folder`, training can be called from the command line as:\n",
+    "\n",
+    "```python model_runner.py --model dino --in_dir input_folder```\n",
+    "\n",
+    "By default, the input size is set to 128, the latent embedding size is set to 32, the model is trained for 10 epochs with 64 cores and a batch size of 256. Two files are created: `model.pth` contains the weights, `embeddings.csv` contains the latent embeddings of all topograpies."
    ]
   }
  ],
